<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_result_of_the_container_group_will_be_reset"
        android:textColor="@color/color_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/taskDoneAddressRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_a_new_result"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/color_text_w"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnItemCancelRouteRes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textColor="@color/color_text"
            android:background="@drawable/white_button_styles"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/btnItemRouteRes"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/item_margin"
            android:gravity="center"
            android:textColor="@color/gmm_white"
            android:background="@drawable/green_button_style"
            android:text="@string/text_enter" />
    </LinearLayout>
</LinearLayout>