<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.tasknew.NewTaskDetailsFragment">

    <TextView
        android:id="@+id/tvTaskAddressNew"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/new_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewTaskActionDropdownMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_task_fragment_action_dropdown_hint">

        <AutoCompleteTextView
            android:id="@+id/actvNewTaskActionDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textEditSuggestionItemLayout="@layout/dropdown_item_trouble_reason" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewTaskContainerDropdownMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_task_fragment_container_dropdown_hint">

        <AutoCompleteTextView
            android:id="@+id/actvNewTaskContainerDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textEditSuggestionItemLayout="@layout/dropdown_item_trouble_reason" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewTaskContractDropdownMenu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_task_fragment_contract_dropdown_hint">

        <AutoCompleteTextView
            android:id="@+id/actvNewTaskContractDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textEditSuggestionItemLayout="@layout/dropdown_item_trouble_reason" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewTaskNumberOfContainersField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/new_task_fragment_containers_number_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNewTaskNumberOfContainersField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textEditSuggestionItemLayout="@layout/dropdown_item_trouble_reason" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNewTaskConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/new_task_fragment_confirm_button" />


</LinearLayout>